# gCRL

./: .gitattributes  .gitignore  CELLORACLE_SETUP.md  LICENSE  Makefile  README.md  environment.yml  gcrl.toml  pyproject.toml  requirements-dev.txt  run_celloracle.sh  run_celloracle_jupyter.sh
data/example/: README.csv  adata.h5ad  adata_with_eigen.h5ad  edges_tf_target.csv  edges_tf_tf.csv  input_regs.txt  nodes.csv
data/reference/: README.md
docs/: adata_specification.docx  eigengenes_explanation.txt  gcrl_ae_training_explanation.txt  gcrl_vae_cell_type_conditioning_plan.txt  gcrl_vae_training_schema_explanation.txt  gcrl_vae_training_schema_explanation_backup_2026_04_30.txt  gcrl_vae_training_schema_methods.txt  gcrl_vae_training_schema_methods_backup_2026_04_30.txt  leiden_explanation.txt  multiplex_leiden_seeder.txt  partial_mcc_perm_experiments.txt
docs/claude_memos/: README.md
ext_tools/SERGIO/: simulate_dag.py
notebooks/: testing.ipynb
notebooks/05_simulation/: 1_GRN_QC.ipynb  2_batch_runner.ipynb  GRN_QC.ipynb  batch_runner.ipynb  peak_into_simulation.ipynb
notebooks/10_modeling_gcrl_ae/: 1_simple_example_AE.ipynb  2_Norman2019_AE.ipynb  2_Norman2019_AE_2026_04_29_100_1.1.ipynb  3_Joung2023_AE.ipynb  (+3 more)
scripts/: compute_eigengenes.py  evaluate_gcrl_vae.py  optimize_partial_mcc.py  run_mcc_experiments_gpu.py  train_poly_AE.py
tests/: test_cli_train_gcrl_ae.py  test_config.py  test_eigengenes.py  test_grn_sim.py  test_partial_mcc.py  test_partial_mcc_perm_experiments.py  test_sergio_cli.py  test_train_gcrl_ae.py  test_train_gcrl_vae.py
(+1064 files in other folders)
